@@ -207,7 +207,16 @@ EventHandlerSDL2::JoystickSDL2::JoystickSDL2(int idx)
   myStick = SDL_JoystickOpen(idx);
   if(myStick)
   {
-    initialize(idx, SDL_JoystickName(myStick),
+    // There still seems to be some issue with certain controllers not being
+    // recognized.  In this case, SDL names the controller as "XInput Controller".
+    // This would be fine except it also appends " #x", where x seems to vary.
+    // Obviously this wreaks havoc with the idea that a joystick will always
+    // have the same name.  So we truncate the number.
+    const char* sdlname = SDL_JoystickName(myStick);
+    const string& desc = BSPF_startsWithIgnoreCase(sdlname, "XInput Controller")
+                         ? "XInput Controller" : sdlname;
+
+    initialize(SDL_JoystickInstanceID(myStick), desc,
         SDL_JoystickNumAxes(myStick), SDL_JoystickNumButtons(myStick),
         SDL_JoystickNumHats(myStick), SDL_JoystickNumBalls(myStick));
   }
@@ -218,5 +227,4 @@ EventHandlerSDL2::JoystickSDL2::~JoystickSDL2()
 {
   if(myStick)
     SDL_JoystickClose(myStick);
-  myStick = nullptr;
 }
