@@ -19,6 +19,9 @@
     Clang 3.3, gcc 4.9, Xcode 6, etc).  Eventually, this will bring more
     bug-free and (hopefully) faster code.
 
+  * Fixed major bug with joysticks, where mapping was being lost on reset,
+    the app would crash when plugging/unplugging certain sticks, etc.
+
   * The minimum supported version for the OSX port is now OSX 10.7.
     Because of this, the 32-bit version is also discontinued, as 10.7
     is 64-bit Intel only.
